--- a/templates/public_home.html
+++ b/templates/public_home.html
@@ -368,8 +368,8 @@
                                     <i class="fas fa-seedling me-1"></i>For Conservation Organizations
                                 </small>
                             </div>
-                            <a href="/ngo/dashboard" class="btn btn-success btn-lg w-100">
-                                <i class="fas fa-sign-in-alt me-2"></i>Access NGO Dashboard
+                            <a href="/ngo/" class="btn btn-success btn-lg w-100">
+                                <i class="fas fa-sign-in-alt me-2"></i>Access NGO Portal
                             </a>
                         </div>
                     </div>
